--- a/inscription.html
+++ b/inscription.html
@@ -23,24 +23,24 @@
 
     <main>
         <h2>Inscrivez-vous.</h2>
-        <section class="sectionForm">
+        <section class="myForm">
             <fieldset>
                 <form action="#" method="post">
                     <div>
                         <label for="nom">Nom d'utilisateur</label><br>
-                        <input type="text" name="nom" id="nom" placeholder="3 caractères minimum" required autofocus title="Renseigner votre nom" pattern="[a-zA-Z]+">
+                        <input type="text" name="nom" id="inputNom" placeholder="3 caractères minimum" required autofocus title="Renseigner votre nom" pattern="[a-zA-Z0-9]{3,}">
                     </div><br>
                     <div>
                         <label for="email">Entrez votre email</label><br>
-                        <input type="text" name="email" id="email" placeholder="Votre e-mail"><br>
+                        <input type="email" name="email" id="inputEmail" placeholder="Votre e-mail"><br>
                     </div><br>
                     <div>
                         <label for="login">Mot de passe</label><br>
-                        <input type="text" name="login" id="login" placeholder="Votre mot de passe" required title="Renseignez un login de minimum 3 caractères" pattern="[a-zA-Z0-9]{3,}">
+                        <input type="email" name="login" id="inputLogin" placeholder="Votre mot de passe" required title="Renseignez un pseudo de minimum 3 caractères" pattern="[a-zA-Z0-9]{3,}">
                     </div><br>
                     <div>
                         <label for="login">Confirmer votre mot de passe</label><br>
-                        <input type="password" name="mdpVerif" id="mdpVerif" placeholder="Confirmer le mot de passe" required title="Confirmez votre mot de passe" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                        <input type="password" name="mdpVerif" id="inputMdpVerif" placeholder="Confirmer le mot de passe" required title="Confirmez votre mot de passe" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
                     </div>
 
                     <div class="information">
@@ -52,7 +52,7 @@
                          <input type="submit" value="Creation du compte" class="btn">
                          <input type="reset" value="Annuler" class="btn"> 
 
-                   
+        
 
                 </form>
             </fieldset>
