--- a/inscription.html
+++ b/inscription.html
@@ -23,34 +23,33 @@
 
     <main>
         <h2>Inscrivez-vous.</h2>
-        <section class="myForm">
             <fieldset>
-                <form action="#" method="post">
-                    <div>
+                <form action="#" method="post" id="myForm">
+                    <div class="form-control ">
                         <label for="nom">Nom d'utilisateur</label><br>
-                        <input type="text" name="nom" id="inputNom" placeholder="3 caractères minimum" required autofocus title="Renseigner votre nom" pattern="[a-zA-Z0-9]{3,}">
+                        <input type="text" name="nom" id="inputNom" placeholder="3 caractères minimum" required autofocus title="Renseigner votre nom">
                         <i class = "fas fa-check-circle"></i>
                         <i class = "fas fa-exclamation"></i><br>
-                        <small>Erreur</small>
+                        <small></small>
                     </div><br>
 
-                    <div>
+                    <div class="form-control ">
                         <label for="email">Entrez votre email</label><br>
-                        <input type="email" name="email" id="inputEmail" placeholder="Votre e-mail">
+                        <input type="email" name="email" id="inputEmail" placeholder="Votre e-mail" pattern="[a-zA-Z0-9]{6,}">
                         <i class = "fas fa-check-circle"></i>
                         <i class = "fas fa-exclamation"></i><br>
-                        <small>Erreur</small>
+                        <small></small>
                     </div><br>
 
-                    <div>
+                    <div class="form-control ">
                         <label for="login">Mot de passe</label><br>
                         <input type="password" name="login" id="inputMdp" placeholder="Votre mot de passe" required title="Renseignez un pseudo de minimum 3 caractères" pattern="[a-zA-Z0-9]{3,}">
                         <i class = "fas fa-check-circle"></i>
                         <i class = "fas fa-exclamation"></i><br>
-                        <small>Erreur</small>
+                        <small>Message d'erreur</small>
                     </div><br>
 
-                    <div>
+                    <div class="form-control ">
                         <label for="login2">Confirmer votre mot de passe</label><br>
                         <input type="password" name="mdpVerif" id="inputMdpVerif" placeholder="Confirmer le mot de passe" required title="Confirmez votre mot de passe" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
                         <i class = "fas fa-check-circle"></i>
@@ -65,12 +64,11 @@
                     <button type="submit">Creation du compte</button>
                     <button type="reset">Annuler</button>
                     </div>
-        
 
                 </form>
             </fieldset>
-        </section>
     </main>
-
+   
+<script src="script.js"></script> 
 </body>
 </html>
